test/fail/suggest-short.mo
import Prim "mo:⛔";

Prim.s;
